@@ -24,8 +24,6 @@ INCLUDES =							\
 	-DVERSION="\"$(VERSION)\"" 				\
 	-DGDK_DISABLE_DEPRECATED 				\
 	-DGDK_PIXBUF_DISABLE_DEPRECATED 			\
-	-DGTK_DISABLE_DEPRECATED 				\
-	-DGNOME_DISABLE_DEPRECATED 				\
 	$(NULL)
 
 LDADD =\
