@@ -11,8 +11,6 @@ INCLUDES = 					\
 	-DDATADIR=\""$(datadir)"\"		\
 	-DGDK_DISABLE_DEPRECATED \
 	-DGDK_PIXBUF_DISABLE_DEPRECATED \
-	-DGTK_DISABLE_DEPRECATED \
-	-DGNOME_DISABLE_DEPRECATED \
 	$(NULL)	
 
 
