@@ -1,3 +1,12 @@
+Mon Oct 20 13:38:16 2003  Jonathan Blandford  <jrb@gnome.org>
+ 
+	* src/Makefile.am (INCLUDES): remove GTK and
+	GNOME_DISABLE_DEPRECATED
+
+	* src/file-manager/Makefile.am (INCLUDES): ditto
+
+	* components/emblem/Makefile.am (INCLUDES): ditto
+
 2003-10-20  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
